--- a/seedly/package.json
+++ b/seedly/package.json
@@ -12,7 +12,9 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-native": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-router-transition": "^2.0.0",
+    "react-scripts": "3.4.1",
+    "react-transition-group": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
